gen/src/antlr/AngularParser.java
// Generated from E:/My_project_compiler/Test_2/src/antlr/AngularParser.g4 by ANTLR 4.13.2
package src.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELECTOR=1, TEMPLATE=2, BOOLEAN=3, LET=4, OF=5, AS=6, LPAREN=7, RPAREN=8, 
		LBRACE=9, RBRACE=10, LBRACKET=11, RBRACKET=12, DOT=13, PIPE=14, QUESTION=15, 
		COLON=16, COMMA=17, PLUS=18, MINUS=19, MULTIPLY=20, DIVIDE=21, EQUAL=22, 
		NOT_EQUAL=23, LESS=24, LESS_EQUAL=25, GREATER=26, GREATER_EQUAL=27, STRING=28, 
		NUMBER=29, HTML_CONTENT=30, INTERPOLATION_START=31, HTML_TEMPLATE_END=32, 
		IDENTIFIER=33, INTERPOLATION_END=34, PIPE_OPERATOR=35, BOOLEAN_OPERATOR=36, 
		ARITHMETIC_OPERATOR=37, RELATIONAL_OPERATOR=38, PUNCTUATION=39, LITERAL=40, 
		WHITESPACE=41, AT=42, HTML_TEMPLATE=43, TEMPLATEURL=44, STYLES=45, SINGLE_LINE_STRING=46, 
		STANDALONE=47, PROPERTY_BINDING=48, ASSIGN=49, EVENT_BINDING=50, TWO_WAY_BINDING=51, 
		OR=52, AND=53, NOT=54, NGIF=55, ELSE=56, SEMICOLON=57, NGFOR=58, XML=59, 
		DTD=60, SCRIPTLET=61, SEA_WS=62, TAG_OPEN=63, TAG_NAME=64, TAG_CLOSE=65, 
		TAG_SLASH=66, TAG_SLASH_CLOSE=67, CDATA=68, NG_ATTRBIUTE=69, SINGLE_QOUTE=70, 
		TAG_EQUALS=71, ATTVALUE_VALUE=72, ID=73, IN=74, HTML_COMMENT=75, HTML_CONDITIONAL_COMMENT=76, 
		SCRIPT_OPEN=77, SCRIPT_BODY=78, SCRIPT_SHORT_BODY=79, STYLE_OPEN=80, STYLE_BODY=81, 
		STYLE_SHORT_BODY=82;
	public static final int
		RULE_program = 0, RULE_component = 1, RULE_componentBody = 2, RULE_mandatoryProperty = 3, 
		RULE_optionalProperty = 4, RULE_propertyAssign = 5, RULE_htmlTemplate = 6, 
		RULE_template = 7, RULE_templateUrl = 8, RULE_styles = 9, RULE_standalone = 10, 
		RULE_binding = 11, RULE_directive = 12, RULE_interpolation = 13, RULE_propertyBinding = 14, 
		RULE_eventBinding = 15, RULE_twoWayBinding = 16, RULE_value = 17, RULE_expression = 18, 
		RULE_pipeExpr = 19, RULE_ternaryExpr = 20, RULE_logicalOrExpr = 21, RULE_logicalAndExpr = 22, 
		RULE_equalityExpr = 23, RULE_relationalExpr = 24, RULE_additiveExpr = 25, 
		RULE_multiplicativeExpr = 26, RULE_unaryExpr = 27, RULE_primaryExpr = 28, 
		RULE_literal = 29, RULE_functionCall = 30, RULE_arrayAccess = 31, RULE_objectAccess = 32, 
		RULE_ngIfDirective = 33, RULE_ngForDirective = 34, RULE_forExpression = 35, 
		RULE_forOptions = 36, RULE_htmlDocument = 37, RULE_scriptletOrSeaWs = 38, 
		RULE_htmlElements = 39, RULE_htmlElement = 40, RULE_htmlContent = 41, 
		RULE_htmlAttribute = 42, RULE_ngfor_body = 43, RULE_htmlChardata = 44, 
		RULE_htmlMisc = 45, RULE_htmlComment = 46, RULE_script = 47, RULE_style = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "component", "componentBody", "mandatoryProperty", "optionalProperty", 
			"propertyAssign", "htmlTemplate", "template", "templateUrl", "styles", 
			"standalone", "binding", "directive", "interpolation", "propertyBinding", 
			"eventBinding", "twoWayBinding", "value", "expression", "pipeExpr", "ternaryExpr", 
			"logicalOrExpr", "logicalAndExpr", "equalityExpr", "relationalExpr", 
			"additiveExpr", "multiplicativeExpr", "unaryExpr", "primaryExpr", "literal", 
			"functionCall", "arrayAccess", "objectAccess", "ngIfDirective", "ngForDirective", 
			"forExpression", "forOptions", "htmlDocument", "scriptletOrSeaWs", "htmlElements", 
			"htmlElement", "htmlContent", "htmlAttribute", "ngfor_body", "htmlChardata", 
			"htmlMisc", "htmlComment", "script", "style"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Component'", "'template'", null, "'let'", "'of'", "'as'", "'('", 
			"')'", "'{'", "'}'", "'['", "']'", "'.'", null, "'?'", "':'", "','", 
			"'+'", "'-'", "'*'", "'/'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
			null, null, null, "'{{'", "'`'", null, "'}}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SELECTOR", "TEMPLATE", "BOOLEAN", "LET", "OF", "AS", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "DOT", "PIPE", 
			"QUESTION", "COLON", "COMMA", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
			"EQUAL", "NOT_EQUAL", "LESS", "LESS_EQUAL", "GREATER", "GREATER_EQUAL", 
			"STRING", "NUMBER", "HTML_CONTENT", "INTERPOLATION_START", "HTML_TEMPLATE_END", 
			"IDENTIFIER", "INTERPOLATION_END", "PIPE_OPERATOR", "BOOLEAN_OPERATOR", 
			"ARITHMETIC_OPERATOR", "RELATIONAL_OPERATOR", "PUNCTUATION", "LITERAL", 
			"WHITESPACE", "AT", "HTML_TEMPLATE", "TEMPLATEURL", "STYLES", "SINGLE_LINE_STRING", 
			"STANDALONE", "PROPERTY_BINDING", "ASSIGN", "EVENT_BINDING", "TWO_WAY_BINDING", 
			"OR", "AND", "NOT", "NGIF", "ELSE", "SEMICOLON", "NGFOR", "XML", "DTD", 
			"SCRIPTLET", "SEA_WS", "TAG_OPEN", "TAG_NAME", "TAG_CLOSE", "TAG_SLASH", 
			"TAG_SLASH_CLOSE", "CDATA", "NG_ATTRBIUTE", "SINGLE_QOUTE", "TAG_EQUALS", 
			"ATTVALUE_VALUE", "ID", "IN", "HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", 
			"SCRIPT_OPEN", "SCRIPT_BODY", "SCRIPT_SHORT_BODY", "STYLE_OPEN", "STYLE_BODY", 
			"STYLE_SHORT_BODY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public List<ComponentContext> component() {
			return getRuleContexts(ComponentContext.class);
		}
		public ComponentContext component(int i) {
			return getRuleContext(ComponentContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(98);
				component();
				}
				}
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==AT );
			setState(103);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(AngularParser.AT, 0); }
		public TerminalNode SELECTOR() { return getToken(AngularParser.SELECTOR, 0); }
		public TerminalNode LPAREN() { return getToken(AngularParser.LPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(AngularParser.LBRACE, 0); }
		public ComponentBodyContext componentBody() {
			return getRuleContext(ComponentBodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(AngularParser.RBRACE, 0); }
		public TerminalNode RPAREN() { return getToken(AngularParser.RPAREN, 0); }
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_component);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(AT);
			setState(106);
			match(SELECTOR);
			setState(107);
			match(LPAREN);
			setState(108);
			match(LBRACE);
			setState(109);
			componentBody();
			setState(110);
			match(RBRACE);
			setState(111);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentBodyContext extends ParserRuleContext {
		public MandatoryPropertyContext mandatoryProperty() {
			return getRuleContext(MandatoryPropertyContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public List<OptionalPropertyContext> optionalProperty() {
			return getRuleContexts(OptionalPropertyContext.class);
		}
		public OptionalPropertyContext optionalProperty(int i) {
			return getRuleContext(OptionalPropertyContext.class,i);
		}
		public ComponentBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentBodyContext componentBody() throws RecognitionException {
		ComponentBodyContext _localctx = new ComponentBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_componentBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			mandatoryProperty();
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(114);
					match(COMMA);
					setState(115);
					optionalProperty();
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(121);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MandatoryPropertyContext extends ParserRuleContext {
		public TemplateContext template() {
			return getRuleContext(TemplateContext.class,0);
		}
		public TemplateUrlContext templateUrl() {
			return getRuleContext(TemplateUrlContext.class,0);
		}
		public MandatoryPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mandatoryProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterMandatoryProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitMandatoryProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitMandatoryProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MandatoryPropertyContext mandatoryProperty() throws RecognitionException {
		MandatoryPropertyContext _localctx = new MandatoryPropertyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mandatoryProperty);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TEMPLATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				template();
				}
				break;
			case TEMPLATEURL:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				templateUrl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptionalPropertyContext extends ParserRuleContext {
		public PropertyAssignContext propertyAssign() {
			return getRuleContext(PropertyAssignContext.class,0);
		}
		public StylesContext styles() {
			return getRuleContext(StylesContext.class,0);
		}
		public StandaloneContext standalone() {
			return getRuleContext(StandaloneContext.class,0);
		}
		public BindingContext binding() {
			return getRuleContext(BindingContext.class,0);
		}
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public OptionalPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionalProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterOptionalProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitOptionalProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitOptionalProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionalPropertyContext optionalProperty() throws RecognitionException {
		OptionalPropertyContext _localctx = new OptionalPropertyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_optionalProperty);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				propertyAssign();
				}
				break;
			case STYLES:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				styles();
				}
				break;
			case STANDALONE:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				standalone();
				}
				break;
			case INTERPOLATION_START:
			case PROPERTY_BINDING:
			case EVENT_BINDING:
			case TWO_WAY_BINDING:
				enterOuterAlt(_localctx, 4);
				{
				setState(131);
				binding();
				}
				break;
			case NGIF:
			case NGFOR:
				enterOuterAlt(_localctx, 5);
				{
				setState(132);
				directive();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertyAssignContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(AngularParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(AngularParser.COLON, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(AngularParser.COMMA, 0); }
		public PropertyAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterPropertyAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitPropertyAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitPropertyAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyAssignContext propertyAssign() throws RecognitionException {
		PropertyAssignContext _localctx = new PropertyAssignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_propertyAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(IDENTIFIER);
			setState(136);
			match(COLON);
			setState(137);
			value();
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(138);
				match(COMMA);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
